@@ -1,5 +1,6 @@
 0.5.4
  - add show_cursor config option (idea from Cheryl Homiak)
+ - autoconf/automake update
 
 0.5.3
  - add allcvs filters (Christoph Sobotka)
